parent 41fa0e53c71ee1b33e9450114809c171d08af2c2 author Liam Bluett <85853561+lbluett@users.noreply.github.com> 1732590092 +1000 committer Liam Bluett <85853561+lbluett@users.noreply.github.com> 1734391465 +1000
Implemented spearman's correlationship

Modified notebook to remove noise and add an explanation and reference.

Add Spearman's to gallery

Change notebook metadata to use 'Python 3 (ipykernel)' and 'python3' rather than custom 'ml' kernel.

Testing for spearman implemented

Maintainer notes followed, notebook fixed... again

Modified notebook to remove noise and add an explanation and reference.

cleanup more

Add Spearman's to gallery

Testing for spearman implemented

Maintainer notes followed, notebook fixed... again

Notebook kernel changed for testing

Update src/scores/continuous/correlation/correlation_impl.py

add pyfunc for hyperlink

Co-authored-by: Stephanie Chong <168800785+Steph-Chong@users.noreply.github.com>
Signed-off-by: Liam Bluett <85853561+lbluett@users.noreply.github.com>

reorder alphabetically

--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -54,6 +54,7 @@
     "- [RMSE](./Root_Mean_Squared_Error.ipynb)\n",
     "- [MSE](./Mean_Squared_Error.ipynb)\n",
     "- [Pearson's Correlation](./Pearsons_Correlation.ipynb)\n",
+    "- [Spearman's Correlation](./Spearmans_Correlation.ipynb)\n",
     "- [Kling-Gupta Efficiency](./Kling_Gupta_Efficiency.ipynb)\n",
     "- [Quantile Loss](./Quantile_Loss.ipynb)\n",
     "- [Murphy Diagrams](./Murphy_Diagrams.ipynb)\n",
